--- a/main/Repository/Repository.csproj
+++ b/main/Repository/Repository.csproj
@@ -66,7 +66,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Providers\EntityFramework\DbContextBase.cs" />
+    <Compile Include="Providers\EntityFramework\DataContext.cs" />
     <Compile Include="EntityBase.cs" />
     <Compile Include="Providers\EntityFramework\Fakes\AsyncEnumerableQuery.cs" />
     <Compile Include="Providers\EntityFramework\Fakes\AsyncEnumeratorWrapper.cs" />
