--- a/main/Northwind.Test/Northwind.Test.csproj
+++ b/main/Northwind.Test/Northwind.Test.csproj
@@ -67,25 +67,34 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Fake\NorthwindFakeContext.cs" />
-    <Compile Include="Fake\NorthwindFakeDbSets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\ProductRepositoryTest.cs" />
-    <Compile Include="Service\CustomerServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Northwind.Entity\Northwind.Entity.csproj">
-      <Project>{97515f06-0783-420c-ac3a-45357015b699}</Project>
-      <Name>Northwind.Entity</Name>
+    <ProjectReference Include="..\Northwind.Entities\Northwind.Entities.csproj">
+      <Project>{8556C7C8-72A6-4857-BAFD-489E42A2A453}</Project>
+      <Name>Northwind.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="..\Northwind.Service\Northwind.Service.csproj">
       <Project>{678DB4A2-A20D-4F71-8A98-D8BBE879DEDD}</Project>
       <Name>Northwind.Service</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Repository.Pattern\Repository.Pattern.csproj">
+      <Project>{061A69C6-BD6C-4DD0-8F23-CD996DF1AA51}</Project>
+      <Name>Repository.Pattern</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RepositoryPattern.Ef6\RepositoryPattern.Ef6.csproj">
+      <Project>{DE5256A9-874F-4BD2-BA49-E2D50C3B9D34}</Project>
+      <Name>RepositoryPattern.Ef6</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Fake\" />
+    <Folder Include="Repository\" />
+    <Folder Include="Service\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
