--- a/main/Source/Repository.Pattern.Ef6/Repository.Pattern.Ef6.csproj
+++ b/main/Source/Repository.Pattern.Ef6/Repository.Pattern.Ef6.csproj
@@ -37,14 +37,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
-      <HintPath>..\..\packages\EntityFramework.6.0.2\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.0.2\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\..\packages\EntityFramework.6.0.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.0.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -54,18 +50,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TrackableEntities.Common">
-      <HintPath>..\..\packages\TrackableEntities.Common.1.0.3.0\lib\portable-net40+sl5+win8+windowsphone8\TrackableEntities.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="TrackableEntities.EF.6">
-      <HintPath>..\..\packages\TrackableEntities.EF.6.1.0.3.0\lib\net45\TrackableEntities.EF.6.dll</HintPath>
-    </Reference>
-    <Reference Include="TrackableEntities.Patterns">
-      <HintPath>..\..\packages\TrackableEntities.Patterns.1.0.3.0\lib\net45\TrackableEntities.Patterns.dll</HintPath>
-    </Reference>
-    <Reference Include="TrackableEntities.Patterns.EF.6">
-      <HintPath>..\..\packages\TrackableEntities.Patterns.EF.6.1.0.3.0\lib\net45\TrackableEntities.Patterns.EF.6.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataContext\DataContext.cs" />
